# schunk_mechatronic_gripper

./: .flake8  .gitignore  README.md
.github/script/: install_dependencies.sh
schunk_gripper_driver/doc/: Ethernet_WSL.md
schunk_gripper_driver/launch/: driver.launch.py
schunk_gripper_driver/schunk_gripper_driver/: driver.py
schunk_gripper_driver/schunk_gripper_driver/tests/: conftest.py  test_configuration.py  test_copyright.py  test_driver.py  test_empty_startup.py  test_gpe_variants.py  test_gripper_parameters.py  test_headless_mode.py  test_parameters.py  test_scanning.py  test_services.py  test_topics.py
schunk_gripper_dummy/schunk_gripper_dummy/: dummy.py  main.py
schunk_gripper_dummy/schunk_gripper_dummy/config/: README.md  read_gripper_parameters.py
schunk_gripper_interfaces/: CMakeLists.txt
schunk_gripper_interfaces/msg/: ConnectionState.msg
schunk_gripper_interfaces/srv/: Grip.srv  GripAtPosition.srv  GripAtPositionGPE.srv  GripAtPositionWithGPE.srv  GripAtPositionWithVelocity.srv  GripAtPositionWithVelocityAndGPE.srv  GripWithGPE.srv  GripWithVelocity.srv  GripWithVelocityAndGPE.srv  MoveToAbsolutePosition.srv  MoveToAbsolutePositionGPE.srv  MoveToRelativePosition.srv  MoveToRelativePositionGPE.srv  ReadGripperParameter.srv  ScanGrippers.srv  SoftGrip.srv  SoftGripAtPosition.srv  SoftGripAtPositionGPE.srv  SoftGripGPE.srv  StartJogging.srv  StartJoggingGPE.srv  StopWithGPE.srv  StrongGripAtPositionGPE.srv  WriteGripperParameter.srv
schunk_gripper_library/: setup.py
schunk_gripper_library/schunk_gripper_library/: driver.py  utility.py
(+21 files in other folders)
